Fix My Week day entry mobile scrolling to the right
Day entry on mobile was not scrolling to the right when screen was too
small. This was due to the day entry table being too wide.
This commit fixes that by making the table scrollable.

--- a/static/css/time_tracking.css
+++ b/static/css/time_tracking.css
@@ -6,6 +6,7 @@ div.time_tracking {
 div.day_entry {
     clear: both;
     position: relative;
+    overflow-y: scroll;
 }
 
 div.day_entry .update-time {
